--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,7 +25,7 @@ jobs:
         env
         echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
         sudo service docker restart
-        docker build --squash --tag septimalmind/izumi-env:latest --tag septimalmind/izumi-env:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env:${GITHUB_SHA} izumi-env-build
+        docker build --squash --tag septimalmind/izumi-env:latest --tag septimalmind/izumi-env:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env:${GITHUB_SHA} . -f Dockerfile.izumi-env-build
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push septimalmind/izumi-env:latest
         docker push septimalmind/izumi-env:${GITHUB_REF_SLUG}
@@ -53,7 +53,7 @@ jobs:
         env
         echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
         sudo service docker restart
-        docker build --squash --tag septimalmind/izumi-env-light:latest --tag septimalmind/izumi-env-light:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env-light:${GITHUB_SHA} izumi-env-runtime
+        docker build --squash --tag septimalmind/izumi-env-light:latest --tag septimalmind/izumi-env-light:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env-light:${GITHUB_SHA} . -f Dockerfile.izumi-env-runtime
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push septimalmind/izumi-env-light:latest
         docker push septimalmind/izumi-env-light:${GITHUB_REF_SLUG}
